--- a/Player Categorization.ipynb
+++ b/Player Categorization.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run top 2 Cells first"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -29,6 +36,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Career Progression by Season"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enter single or multiple players to view how they have been categorized throughout their career. <br>\n",
+    "Can give full name or last name."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -36,6 +58,21 @@
    "source": [
     "player = ['Klay Thompson', 'Stephen Curry']\n",
     "plot_career(player, seasons[-2], seasons[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Player Categorization - Comparing to Similar Players"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Give single player, can be last name or full name. <br>\n",
+    "Stats given are career averages and figure shows comparison to other players in same category."
    ]
   },
   {
@@ -49,6 +86,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cluster Summaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shows a summary of clusters used in above graphs. <br>\n",
+    "Use \"show_summary(career)\" to show clusters of entire career stats, use \"show_summary(seasons)\" to show summary of by season clusters. <br>\n",
+    "Stats are average stats of that cluster, i.e. the \"typical\" player of that type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "closest: &nbsp;The player with stats closest to the average, the prototype of the cluster <br>\n",
+    "min: &emsp;&ensp;&nbsp;Outlier of the category with points below average (aim is to show outlier player with min stats in the cluster) <br>\n",
+    "max: &emsp;&ensp;Outlier player, furthest away from typical player "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -56,6 +118,13 @@
    "source": [
     "show_summary(career)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
